force-app/main/default/objects/Person__c/Person__c.object-meta.xml
<CustomObject>
    <label>Person</label>
    <nameField>
        <label>Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>