force-app/main/default/objects/Person__c/fields/Cumple__c.field-meta.xml
<CustomField>
    <fullName>Cumple__c</fullName>
    <label>Cumple</label>
    <required>true</required>
    <type>Date</type>
</CustomField>