force-app/main/default/objects/Person__c/fields/LetrasPersonalidad__c.field-meta.xml
<CustomField>
    <fullName>LetrasPersonalidad__c</fullName>
    <inlineHelpText>Letras de la personalidad asignada</inlineHelpText>
    <label>LetrasPersonalidad</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>