force-app/main/default/objects/Person__c/fields/Personality__c.field-meta.xml
<CustomField>
    <fullName>Personality__c</fullName>
    <label>Personality</label>
    <referenceTo>Personality__c</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>